[package]
name = "grok_list"
version = "0.1.0"
authors = ["Greg Cline"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
color-eyre = "0.5.10"
thiserror = "1.0.22"
futures = "0.3.8"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
tap = "1.0.1"

[dependencies.tokio]
version = "0.3.6"
features = ["full"]

[dependencies.mongodb]
version = "1.2.2"
default-features = false
features = ["async-std-runtime"]
